--- a/EmlakTakip/Views/Home/Create.cshtml
+++ b/EmlakTakip/Views/Home/Create.cshtml
@@ -117,6 +117,16 @@
                     </select>
                 </div>
 
+                <div class="col-md-6">
+                    <label class="form-label">Emlak Tipi</label>
+                    <select class="form-select" name="EmlakTipi" id="EmlakTipi">
+                        <option value="Müstakil">Müstakil</option>
+                        <option value="Villa">Villa</option>
+                        <option value="Apartman">Apartman</option>
+                        <option value="İş Yerleri">iş Yeri</option>
+                    </select>
+                </div>
+
                 <div class="col-12">
                     <label class="form-label">Açıklama</label>
                     <textarea name="Aciklama" rows="4" class="form-control" placeholder="Detaylı bilgi..."></textarea>
