--- a/EmlakTakip/wwwroot/css/site.css
+++ b/EmlakTakip/wwwroot/css/site.css
@@ -3,12 +3,22 @@
 
 html {
   font-size: 14px;
+  font-family: "Poppins", sans-serif;
 }
 
 @media (min-width: 768px) {
   html {
     font-size: 16px;
   }
+}
+
+.navbar {
+  background-color: #2c3e50;
+  color: white;
+  padding: 15px 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .btn:focus,
