--- a/EmlakTakip/Views/Account/Login.cshtml
+++ b/EmlakTakip/Views/Account/Login.cshtml
@@ -62,6 +62,12 @@
             <button type="submit" class="btn btn-primary w-100">
                 <i class="fa-solid fa-right-to-bracket me-1"></i> Giriş Yap
             </button>
+
+            <div class="text-center mt-3">
+                <a asp-action="Index" asp-controller="Ana" class="btn btn-link text-decoration-none">
+                    Ana sayfa
+                </a>
+            </div>
         </form>
     </div>
 
